# iterable

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: lazy.rs  simple.rs
src/: delegate.rs  iterable.rs  lib.rs  test.rs  util.rs  with_filter.rs
src/impls/: array.rs  collections.rs  hash_map.rs  hash_set.rs  mod.rs  reference.rs  slice.rs  str.rs  string.rs  vec.rs  with_filter.rs
src/impls/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  vec.rs  vec_deque.rs
src/lazy/: lazy_chain.rs  lazy_cloned.rs  lazy_copied.rs  lazy_cycle.rs  lazy_enumerate.rs  lazy_filter.rs  lazy_filter_map.rs  lazy_flat_map.rs  lazy_flatten.rs  lazy_map.rs  lazy_map_while.rs  lazy_rev.rs  lazy_scan.rs  lazy_skip.rs  lazy_skip_while.rs  lazy_step_by.rs  lazy_take.rs  lazy_zip.rs  mod.rs
tests/: growable.rs  iterable.rs  iterable_seq.rs  itertools.rs  lazy.rs
