[package]
name = "iterable"
version = "0.6.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2021"
description = "An iterable library for Rust collection like types."
license = "MIT"
repository = "https://github.com/nooberfsh/iterable"
homepage = "https://github.com/nooberfsh/iterable"
documentation = "https://docs.rs/iterable"
keywords = ["iterable", "collection", "traversable", "strict", "lazy"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
maplit = "1.0.2"

[dependencies]
itertools = "0.10.5"
